<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    >

    <TextView
        android:id="@+id/main_item_textview_title"
        android:text="Deception"
        android:textColor="#000"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="19dp"
        android:textSize="14sp"

        android:maxLines="1"
        android:ellipsize="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/main_item_textview_description"
        android:text="5 hours ago by ThatsMyHoverboard to r/funny"
        android:textColor="#757575"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="39dp"
        android:textSize="14sp"

        android:maxLines="1"
        android:ellipsize="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <!-- please, don't set any src here
         otherwise tests won't be able to check
         was an image set or not -->
    <ImageView
        android:id="@+id/main_item_imageview"
        android:scaleType="centerCrop"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="48dp"
        android:layout_width="match_parent"
        android:layout_height="176dp"
        />



    <TextView
        android:id="@+id/main_item_textview_upvotes"
        android:gravity="center_vertical|left"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:textSize="14sp"

        android:layout_gravity="bottom|right"
        android:layout_marginRight="12dp"
        android:text="99999"
        android:ellipsize="end"
        android:maxLength="5"
        />


    <ImageView
        android:id="@+id/main_item_click_upvote"
        android:gravity="center_vertical"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|right"

        android:clickable="true"
        android:background="?selectableItemBackground"
        android:soundEffectsEnabled="true"
        android:hapticFeedbackEnabled="true"
        android:padding="12dp"
        android:layout_marginRight="60dp"
        android:src="@drawable/ic_action_upvote"
        />


    <TextView
        android:id="@+id/main_item_textview_downvotes"
        android:gravity="center_vertical|left"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:textSize="14sp"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="140dp"
        android:text="99999"
        android:ellipsize="end"
        android:maxLength="5"
        />


    <ImageView
        android:id="@+id/main_item_click_downvote"
        android:gravity="center_vertical"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|right"

        android:clickable="true"
        android:background="?selectableItemBackground"
        android:soundEffectsEnabled="true"
        android:hapticFeedbackEnabled="true"
        android:padding="12dp"
        android:layout_marginRight="188dp"
        android:src="@drawable/ic_action_downvote"
        />

</android.support.v7.widget.CardView>