<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.egslava.reddit.ui.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/main_recyclerview_posts"
        android:paddingTop="16dp"
        android:paddingBottom="64dp"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/main_fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_action_add" />

</FrameLayout>
