<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.egslava.reddit.ui.AddPostActivity">

    <!--<android.support.design.widget.AppBarLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:theme="@style/AppTheme.AppBarOverlay">-->

    <android.support.v7.widget.Toolbar
        android:id="@+id/add_toolbar"
        app:titleTextColor="#FFF"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <EditText
        android:gravity="top"
        android:scrollHorizontally="false"
        android:inputType="text"
        android:lines="10"
        android:imeOptions="actionDone"
        android:id="@+id/add_edittext_message"
        android:hint="@string/add_edittext_message_hint"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:maxLength="255"/>
    <TextView
        android:id="@+id/add_textview_symbols_indicator"
        android:text="200/255"
        android:layout_width="56sp"
        android:layout_height="17sp"
        android:textSize="14sp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="bottom|right"/>
    <!--</android.support.design.widget.AppBarLayout>-->

    <!--<include layout="@layout/content_add_post" />-->


</FrameLayout>
